--- a/main.css
+++ b/main.css
@@ -2,23 +2,54 @@
   padding: 0px;
   margin: 0px;
   text-decoration: none;
+  font-family: "Arial Rounded", Helvetica, Arial, sans-serif;
 }
 .clearfix::after {
   display: block;
   content: '';
   clear: both;
 }
+img[src=''],
+img:not([src]) {
+  opacity: 0;
+}
+body {
+  background: #fff url("https://s1.ax1x.com/2020/03/17/8NCzDI.png") repeat center center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 header {
   padding: 0px 230px;
   background-color: #000;
 }
+header .inner {
+  min-width: 450px;
+}
 header .inner .icon {
   float: left;
-  margin: 10px 0px;
+  margin: 20px 0px;
+}
+header .inner .icon a {
+  display: block;
+}
+header .inner .icon a img {
+  display: block;
+  height: 64px;
 }
 header .inner .search {
   float: right;
   margin: 35px 0px;
+}
+header .inner .search input {
+  height: 18px;
+  padding: 8px;
+  background-color: #e8f0fe;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  vertical-align: top;
 }
 header .inner .search a {
   color: #fff;
@@ -26,39 +57,95 @@ header .inner .search a {
   font-size: 12px;
   padding: 8px;
   background-color: #555;
+  border-radius: 4px;
+  display: inline-block;
+  vertical-align: top;
+}
+header .ornament {
+  position: fixed;
+  top: -30px;
+  right: -30px;
 }
 main {
   margin-top: 20px;
   text-align: center;
+  min-width: 1230px;
 }
 main>div.wrapper {
   display: inline-block;
+  text-align: left;
+  margin-left: 12px;
 }
 main>div.wrapper div {
   font-size: 12px;
 }
-main>div.wrapper div:nth-child(2) {
-  margin-left: 3em;
+main>div.wrapper div .long,
+main>div.wrapper div .enter,
+main>div.wrapper div .shift {
+  width: 120px;
 }
-main>div.wrapper div:nth-child(3) {
-  margin-left: 6em;
+main>div.wrapper div .long span,
+main>div.wrapper div .enter span,
+main>div.wrapper div .shift span {
+  display: inline-block;
+  vertical-align: top;
+  text-transform: lowercase;
+  font-size: 16px;
+  padding: 5px;
+}
+main>div.wrapper div .enter {
+  width: 138px;
+}
+main>div.wrapper div .shift {
+  width: 181px;
+}
+main>div.wrapper div .left {
+  text-align: left;
+}
+main>div.wrapper div .right {
+  text-align: right;
 }
 main>div.wrapper div>kbd {
   text-align: center;
+  vertical-align: top;
   border: 1px solid #000;
   font-size: 2em;
   display: inline-block;
-  width: 3em;
-  height: 3em;
+  padding: 5px 10px;
+  width: 71px;
+  box-sizing: border-box;
+  background-color: #000;
+  color: #fff;
+  height: 69px;
   text-transform: uppercase;
   position: relative;
+  margin: 0 12px 12px 0;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.5);
+  top: 0;
+  transition: top 0.1s;
+}
+main>div.wrapper div>kbd img {
+  display: inline-block;
+  vertical-align: top;
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
 }
 main>div.wrapper div>kbd button {
   position: absolute;
   bottom: 5px;
   right: 5px;
   display: none;
+  transition: all 0.3s;
 }
 main>div.wrapper div>kbd:hover button {
   display: inline-block;
+}
+main>div.wrapper div>kbd:active {
+  top: 2px;
+  box-shadow: 2px 0 2px rgba(0,0,0,0.5);
 }
