--- a/main.styl
+++ b/main.styl
@@ -104,9 +104,11 @@ main
                 position relative
                 margin 0 12px 12px 0
                 border-radius: 5px
-                box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.5)
                 top 0
                 transition top 0.1s
+                // box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.5)
+                border: 1px solid #373737;
+                box-shadow: 0px 0px 0px 1px #1f2020, 2px 2px 0px 2px #080808                
 
                 img 
                     display inline-block
