1. 修复了部分bug：自定义网址循环交互，this指向问题 2. 重构了代码

--- a/main.css
+++ b/main.css
@@ -65,6 +65,11 @@ header .ornament {
   position: fixed;
   top: -30px;
   right: -30px;
+  transition: all 0.4s;
+}
+header .ornament:hover {
+  top: -10px;
+  right: -10px;
 }
 main {
   margin-top: 20px;
