--- a/main.styl
+++ b/main.styl
@@ -58,6 +58,10 @@ header
         position: fixed
         top -30px
         right -30px
+        transition: all 0.4s
+        &:hover
+            top -10px
+            right -10px
 
                 
 main
