--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ img:not([src]) {
 }
 body {
   background: #fff url("https://s1.ax1x.com/2020/03/17/8NCzDI.png") repeat center center;
+  min-width: 1230px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
