--- a/main.styl
+++ b/main.styl
@@ -15,6 +15,7 @@ img[src=''],img:not([src]){
 
 body
     background:#fff url("https://s1.ax1x.com/2020/03/17/8NCzDI.png") repeat center center  
+    min-width 1230px                //当body子元素有min-width时，body最好加上min-width 防止溢出bug
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
